--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,19 @@
 {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": true,
+                    "esmodules": true
+                },
+                "modules": false
+            }
+        ]
+    ],
+    "env": {
+        "test": {
+          "plugins": ["@babel/plugin-transform-modules-commonjs"]
+        }
+      }
 }
